tests/pass/Ucomp.java
package pass;
public class Ucomp {
    public int flip(int x){
        return ~x;
    }
}
