tests/fail/BNOT.java
package fail;

public class BNOT {
        public int BitwiseNOT (int x){
            
            return ~"D";
    }
}
